--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.3.0",
     "live-server": "^1.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-easy-audio": "^0.2.3",
     "react-game-kit": "^1.0.6",
+    "react-native-simple-sound": "^1.0.0",
+    "react-player": "^1.3.1",
     "react-scripts": "1.1.1"
   },
   "scripts": {
